# COVE

./: .gitignore  README.md  pyproject.toml
cove/: __init__.py  dimension_reduction.py  embedder.py
experiments/: cge.ipynb  clustering.ipynb  graph_stats.ipynb  link_prediction.ipynb  store_embeddings.py  utils.py  visualizations.ipynb
